clear form after submit

--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
                 btn.value = 'Send Email';
                 alert(JSON.stringify(err));
               });
+             form.reset();
           });
 
         </script>
