--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                                           </div>
                                           <div class="row mb-3">
                                             <div class="col">
-                                              <div class="form-group" style="background: transparent"> <label for="form_need">Please specify your need *</label> <select id="form_need" name="form_need"demo class="form-control" required="required" data-error="Please specify your need.">
+                                              <div class="form-group" style="background: transparent"> <label for="form_need">Please specify what you need *</label> <select id="form_need" name="form_need"demo class="form-control" required="required" data-error="Please specify your need.">
                                                                     <option value="" selected disabled>--Select Your Issue--</option>
                                                                     <option>Website building</option>
                                                                     <option>Design, Fusion Autodesk</option>
